--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
     "@storybook/addon-postcss": "^2.0.0",
     "@storybook/addon-svelte-csf": "^1.1.0",
     "@storybook/svelte": "^6.4.0",
-    "@sveltejs/adapter-vercel": "^1.0.0-next.31",
-    "@sveltejs/kit": "^1.0.0-next.201",
+    "@sveltejs/adapter-vercel": "next",
+    "@sveltejs/kit": "next",
     "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/typography": "^0.5.0",
     "@testing-library/jest-dom": "^5.16.1",
