--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "@graphql-codegen/cli": "^2.3.0",
     "@graphql-codegen/introspection": "^2.1.0",
     "@graphql-codegen/named-operations-object": "^2.2.0",
+    "@graphql-codegen/typed-document-node": "^2.2.1",
     "@graphql-codegen/typescript": "^2.4.1",
     "@graphql-codegen/typescript-operations": "^2.2.1",
     "@graphql-codegen/typescript-urql": "^3.4.1",
     "@graphql-codegen/typescript-urql-graphcache": "^2.2.2",
     "@graphql-codegen/urql-introspection": "^2.1.0",
     "@graphql-codegen/urql-svelte-operations-store": "^1.1.8",
+    "@graphql-typed-document-node/core": "^3.1.1",
     "@storybook/addon-actions": "^6.4.0",
     "@storybook/addon-essentials": "^6.4.0",
     "@storybook/addon-links": "^6.4.0",
