--- a/.graphqlrc.yml
+++ b/.graphqlrc.yml
@@ -1,2 +1,2 @@
 schema: './src/graphql.schema.json'
-documents: './src/**/*.{graphql,js,ts,jsx,tsx}'
+documents: './src/**/*.{graphql,js,ts,jsx,tsx,svelte}'
