--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@graphql-codegen/gql-tag-operations-preset": "^1.2.1",
     "@graphql-codegen/introspection": "^2.1.0",
     "@graphql-codegen/named-operations-object": "^2.2.0",
+    "@graphql-codegen/near-operation-file-preset": "^2.2.2",
     "@graphql-codegen/typed-document-node": "^2.2.1",
     "@graphql-codegen/typescript": "^2.4.1",
     "@graphql-codegen/typescript-operations": "^2.2.1",
