--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@storybook/addon-postcss": "^2.0.0",
     "@storybook/addon-svelte-csf": "^1.1.0",
     "@storybook/svelte": "^6.4.0",
+    "@sveltejs/adapter-auto": "^1.0.0-next.4",
     "@sveltejs/adapter-static": "^1.0.0-next.22",
     "@sveltejs/adapter-vercel": "next",
     "@sveltejs/kit": "next",
