--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "eslint-plugin-storybook": "^0.5.0",
     "eslint-plugin-svelte3": "^3.2.1",
     "jest": "^27.4.5",
+    "just-insert": "^3.0.1",
     "msw": "^0.36.1",
     "msw-storybook-addon": "^1.4.1",
     "postcss": "^8.4.5",
