--- a/package.json
+++ b/package.json
@@ -50,8 +50,8 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/svelte": "^3.0.3",
     "@types/jest": "^27.0.3",
-    "@typescript-eslint/eslint-plugin": "^5.7.0",
-    "@typescript-eslint/parser": "^5.7.0",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
     "@urql/devtools": "^2.0.3",
     "@urql/introspection": "^0.3.1",
     "@zerodevx/svelte-toast": "^0.6.2",
@@ -63,8 +63,11 @@
     "cross-env": "^7.0.3",
     "daisyui": "^1.16.5",
     "date-fns": "^2.27.0",
-    "eslint": "^8.4.1",
+    "eslint": "^8.2.0",
+    "eslint-config-airbnb-base": "15.0.0",
+    "eslint-config-airbnb-typescript": "^16.1.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-storybook": "^0.5.0",
     "eslint-plugin-svelte3": "^3.2.1",
     "jest": "^27.4.5",
