--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@graphql-codegen/typescript-urql-graphcache": "^2.2.2",
     "@graphql-codegen/urql-introspection": "^2.1.0",
     "@graphql-codegen/urql-svelte-operations-store": "^1.1.8",
+    "@graphql-eslint/eslint-plugin": "^3.2.0",
     "@graphql-typed-document-node/core": "^3.1.1",
     "@storybook/addon-actions": "^6.4.0",
     "@storybook/addon-essentials": "^6.4.0",
