--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,8 +19,14 @@
 			"$lib/*": ["src/lib/*"],
 			"$components/*": ["./src/components/*"],
 			"$generated/*": ["./src/generated/*"],
-			"$routes/*": ["./src/routes/*"],
-		},
+			"$routes/*": ["./src/routes/*"]
+		}
 	},
-	"include": ["src/**/*.d.ts", "src/**/*.js", "src/**/*.ts", "src/**/*.svelte", "./jest-setup.ts"]
+	"include": [
+		"src/**/*.d.ts",
+		"src/**/*.js",
+		"src/**/*.ts",
+		"src/**/*.svelte",
+		"./jest-setup.ts"
+	]
 }
