buttonset to row

--- a/package.json
+++ b/package.json
@@ -74,7 +74,13 @@
     "eslint-plugin-svelte3": "^3.2.1",
     "jest": "^27.4.5",
     "just-capitalize": "^3.0.1",
+    "just-flatten-it": "^5.0.1",
     "just-insert": "^3.0.1",
+    "just-is-empty": "^3.1.1",
+    "just-map-keys": "^2.1.1",
+    "just-pluck-it": "^2.1.0",
+    "just-reduce-object": "^2.0.1",
+    "just-zip-it": "^3.0.1",
     "msw": "^0.36.1",
     "msw-storybook-addon": "^1.4.1",
     "postcss": "^8.4.5",
