upgrade sveltekit, remove some adapters

--- a/package.json
+++ b/package.json
@@ -42,10 +42,8 @@
     "@storybook/addon-postcss": "^2.0.0",
     "@storybook/addon-svelte-csf": "^1.1.0",
     "@storybook/svelte": "^6.4.0",
-    "@sveltejs/adapter-auto": "^1.0.0-next.4",
-    "@sveltejs/adapter-static": "^1.0.0-next.22",
-    "@sveltejs/adapter-vercel": "next",
-    "@sveltejs/kit": "next",
+    "@sveltejs/adapter-auto": "^1.0.0-next.5",
+    "@sveltejs/kit": "^1.0.0-next.203",
     "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/typography": "^0.5.0",
     "@testing-library/jest-dom": "^5.16.1",
@@ -83,6 +81,7 @@
     "just-zip-it": "^3.0.1",
     "msw": "^0.36.1",
     "msw-storybook-addon": "^1.4.1",
+    "npm-check": "^5.9.2",
     "postcss": "^8.4.5",
     "postcss-cli": "^9.0.2",
     "prettier": "^2.4.1",
