--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "carbon-icons-svelte": "^10.44.3",
     "carbon-preprocess-svelte": "^0.6.0",
     "concurrently": "^6.4.0",
+    "cookie": "^0.4.1",
     "cross-env": "^7.0.3",
     "date-fns": "^2.27.0",
     "eslint": "^8.2.0",
