pass around user.sub from auth0

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -32,6 +32,7 @@
 		"usernamehw.errorlens",
 		"graphql.vscode-graphql"
 	],
+	"runArgs": ["--network=host"]
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [],
 	// Use 'postCreateCommand' to run commands after the container is created.
