--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@zerodevx/svelte-toast": "^0.6.2",
     "autoprefixer": "^10.4.0",
     "babel-loader": "^8.2.3",
+    "broadcast-channel": "^4.9.0",
     "carbon-components-svelte": "^0.50.2",
     "carbon-icons-svelte": "^10.44.3",
     "carbon-preprocess-svelte": "^0.6.0",
