--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
+    "custom-lint": "eslint . --ext .ts,.svelte,.graphql",
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
     "generate": "graphql-codegen --config codegen.cjs",
     "storybook": "start-storybook -p 6006",
@@ -43,7 +44,7 @@
     "@storybook/addon-svelte-csf": "^1.1.0",
     "@storybook/svelte": "^6.4.0",
     "@sveltejs/adapter-auto": "^1.0.0-next.7",
-    "@sveltejs/kit": "^1.0.0-next.211",
+    "@sveltejs/kit": "^1.0.0-next.212",
     "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/typography": "^0.5.0",
     "@testing-library/jest-dom": "^5.16.1",
