--- a/package.json
+++ b/package.json
@@ -111,7 +111,7 @@
     "@felte/validator-zod": "^0.3.6",
     "@urql/exchange-graphcache": "^4.3.5",
     "@urql/svelte": "^1.3.2",
-    "felte": "^0.8.7",
+    "felte": "0.9.0",
     "graphql": "^16.0.1",
     "urql": "^2.0.5",
     "zod": "^3.11.6"
