--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "just-insert": "^3.0.1",
     "just-is-empty": "^3.1.1",
     "just-map-keys": "^2.1.1",
+    "just-map-values": "^3.0.2",
     "just-pluck-it": "^2.1.0",
     "just-reduce-object": "^2.0.1",
     "just-zip-it": "^3.0.1",
