--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,6 @@
 	"useTabs": true,
 	"singleQuote": true,
 	"trailingComma": "all",
-	"printWidth": 80
+	"printWidth": 80,
+	"svelteBracketNewLine": false
 }
