--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,5 @@
 	"singleQuote": true,
 	"trailingComma": "all",
 	"printWidth": 80,
-	"svelteBracketNewLine": false
+	"svelteBracketNewLine": true
 }
