--- a/.prettierrc
+++ b/.prettierrc
@@ -2,6 +2,5 @@
 	"useTabs": true,
 	"singleQuote": true,
 	"trailingComma": "all",
-	"printWidth": 80,
-	"svelteBracketNewLine": true
+	"printWidth": 80
 }
