--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "generate": "graphql-codegen --config codegen.yml"
   },
   "devDependencies": {
-    "@auth0/auth0-spa-js": "^1.19.3",
     "@babel/core": "^7.16.5",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@graphql-codegen/cli": "^2.3.0",
@@ -36,11 +35,12 @@
     "@graphql-eslint/eslint-plugin": "^3.2.0",
     "@graphql-typed-document-node/core": "^3.1.1",
     "@sveltejs/adapter-auto": "^1.0.0-next.7",
-    "@sveltejs/kit": "^1.0.0-next.229",
+    "@sveltejs/kit": "^1.0.0-next.231",
     "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/typography": "^0.5.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/svelte": "^3.0.3",
+    "@types/cookie": "^0.4.1",
     "@types/jest": "^27.0.3",
     "@types/uuid": "^8.3.3",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
@@ -57,13 +57,13 @@
     "cookie": "^0.4.1",
     "cross-env": "^7.0.3",
     "date-fns": "^2.27.0",
-    "eslint": "^8.2.0",
+    "eslint": "^8.7.0",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-config-airbnb-typescript": "^16.1.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-jest": "^25.3.0",
+    "eslint-plugin-jest": "^25.7.0",
     "eslint-plugin-svelte3": "^3.4.0",
     "jest": "^27.4.5",
     "just-capitalize": "^3.0.1",
@@ -80,15 +80,15 @@
     "postcss-cli": "^9.0.2",
     "prettier": "^2.4.1",
     "prettier-plugin-svelte": "^2.6.0",
-    "svelte": "^3.46.1",
+    "svelte": "^3.46.2",
     "svelte-calendar": "^3.1.6",
     "svelte-check": "^2.3.0",
     "svelte-fa": "^2.4.0",
     "svelte-jester": "^2.1.5",
     "svelte-loader": "^3.1.2",
     "svelte-preprocess": "^4.10.0",
-    "tailwindcss": "^3.0.13",
-    "ts-jest": "^27.1.1",
+    "tailwindcss": "^3.0.15",
+    "ts-jest": "^27.1.3",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
     "tslib": "^2.3.1",
     "typescript": "^4.5.4",
