--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "@urql/svelte": "^1.3.2",
     "felte": "0.9.0",
     "graphql": "^16.0.1",
+    "just-flush": "^2.0.1",
     "urql": "^2.0.5",
     "zod": "^3.11.6"
   }
