--- a/package.json
+++ b/package.json
@@ -43,14 +43,14 @@
     "@types/cookie": "^0.4.1",
     "@types/jest": "^27.0.3",
     "@types/uuid": "^8.3.3",
-    "@typescript-eslint/eslint-plugin": "^5.9.1",
-    "@typescript-eslint/parser": "^5.9.1",
+    "@typescript-eslint/eslint-plugin": "^5.10.0",
+    "@typescript-eslint/parser": "^5.10.0",
     "@urql/devtools": "^2.0.3",
     "@urql/introspection": "^0.3.1",
     "autoprefixer": "^10.4.0",
     "babel-loader": "^8.2.3",
     "broadcast-channel": "^4.9.0",
-    "carbon-components-svelte": "^0.51.3",
+    "carbon-components-svelte": "^0.53.0",
     "carbon-icons-svelte": "^10.44.3",
     "carbon-preprocess-svelte": "^0.6.0",
     "concurrently": "^7.0.0",
@@ -76,6 +76,8 @@
     "just-reduce-object": "^2.0.1",
     "just-zip-it": "^3.0.1",
     "npm-check": "^5.9.2",
+    "pino": "^7.6.3",
+    "pino-pretty": "^7.3.0",
     "postcss": "^8.4.5",
     "postcss-cli": "^9.0.2",
     "prettier": "^2.4.1",
@@ -86,7 +88,7 @@
     "svelte-fa": "^2.4.0",
     "svelte-jester": "^2.1.5",
     "svelte-loader": "^3.1.2",
-    "svelte-preprocess": "^4.10.0",
+    "svelte-preprocess": "^4.10.2",
     "tailwindcss": "^3.0.15",
     "ts-jest": "^27.1.3",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
