--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "just-zip-it": "^3.0.1",
     "npm-check": "^5.9.2",
     "pino": "^7.6.3",
+    "pino-logflare": "^0.3.12",
     "pino-pretty": "^7.3.0",
     "postcss": "^8.4.5",
     "postcss-cli": "^9.0.2",
