uuid scalar. add uuid in trx fragment

--- a/codegen.yml
+++ b/codegen.yml
@@ -55,6 +55,7 @@ config:
 
   scalars:
     date: string
+    uuid: string
     # UnsignedInt: number
     # URL: string
     # JSON: any # string | number | boolean | null | Array<Scalars['JSON']> | Scalars['JSONObject']
