--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@graphql-codegen/urql-svelte-operations-store": "^1.1.8",
     "@graphql-eslint/eslint-plugin": "^3.2.0",
     "@graphql-typed-document-node/core": "^3.1.1",
+    "@pinojs/json-colorizer": "^3.0.0",
     "@sveltejs/adapter-auto": "^1.0.0-next.11",
     "@sveltejs/kit": "^1.0.0-next.232",
     "@tailwindcss/forms": "^0.4.0",
