use urql-introspected schema for awareness

--- a/codegen.yml
+++ b/codegen.yml
@@ -9,6 +9,11 @@ generates:
   ./src/graphql.schema.json:
     plugins:
       - introspection
+  ./src/urql-graphql.schema.json:
+    plugins:
+      - urql-introspection
+    config:
+      useTypeImports: false
   ./src/generated/graphql.ts:
     plugins:
       - add:
