--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "concurrently": "^7.0.0",
     "cookie": "^0.4.1",
     "cross-env": "^7.0.3",
+    "cypress": "^9.3.1",
     "date-fns": "^2.27.0",
     "eslint": "^8.7.0",
     "eslint-config-airbnb-base": "15.0.0",
