--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "svelte-gql",
   "version": "0.0.1",
   "scripts": {
-    "dev:only": "svelte-kit dev --host",
+    "dev:only": "svelte-kit dev",
     "build:only": "svelte-kit build",
     "tailwind:watch": "cross-env TAILWIND_MODE=watch cross-env NODE_ENV=development postcss src/styles/tailwind.css -o src/styles/tailwind-output.css -w",
     "tailwind:build": "cross-env TAILWIND_MODE=build cross-env NODE_ENV=production postcss src/styles/tailwind.css -o src/styles/tailwind-output.css",
