--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,43 +1,52 @@
 {
 	"compilerOptions": {
-		"strict": true,
 		"moduleResolution": "node",
-		"module": "es2020",
-		"lib": ["es2020", "DOM"],
-		"target": "es2020",
+		"target": "es2017",
 		"importsNotUsedAsValues": "error",
+		"preserveValueImports": true,
 		"isolatedModules": true,
-		"resolveJsonModule": true,
 		"sourceMap": true,
 		"esModuleInterop": true,
 		"skipLibCheck": true,
-		"forceConsistentCasingInFileNames": true,
 		"baseUrl": ".",
+		"forceConsistentCasingInFileNames": true,
+		"strict": true,
+		// "module": "es2020",
+		// "lib": [
+		// 	"es2020",
+		// 	// "DOM"
+		// ],
+		"resolveJsonModule": true,
 		"allowJs": true,
 		"checkJs": true,
 		"paths": {
-			"$lib": ["src/lib"],
-			"$lib/*": ["src/lib/*"],
-			"$components/*": ["./src/components/*"],
-			"$generated/*": ["./src/generated/*"],
-			"$routes/*": ["./src/routes/*"]
-		}
+			"$lib": [
+				"src/lib"
+			],
+			"$lib/*": [
+				"src/lib/*"
+			],
+			"$components/*": [
+				"./src/components/*"
+			],
+			"$generated/*": [
+				"./src/generated/*"
+			],
+			"$routes/*": [
+				"./src/routes/*"
+			]
+		},
 	},
 	"include": [
-		"src/**/*.d.ts",
-		"src/**/*.js",
-		"src/**/*.ts",
-		"src/**/*.svelte",
+		// "src/**/*.d.ts",
+		// "src/**/*.js",
+		// "src/**/*.ts",
+		// "src/**/*.svelte",
+		"src/**/*",
 		"./jest-setup.ts"
 	],
 	"exclude": [
 		"node_modules/*",
-		"dist/*",
-		".svelte/*",
-		".svelte-kit/*",
-		"build/*",
-		"coverage/*",
-		".vercel_build_output/*",
-		"functions/*"
-	]
+		// ".svelte"
+	],
 }
