--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
 		"baseUrl": ".",
 		"forceConsistentCasingInFileNames": true,
 		"strict": true,
-		// "module": "es2020",
+		"module": "es2020",
 		// "lib": [
 		// 	"es2020",
 		// 	// "DOM"
