--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@graphql-codegen/urql-svelte-operations-store": "^1.1.8",
     "@graphql-eslint/eslint-plugin": "^3.7.0",
     "@graphql-typed-document-node/core": "^3.1.1",
+    "@leveluptuts/svelte-toy": "^0.0.18",
     "@pinojs/json-colorizer": "^3.0.0",
     "@sveltejs/adapter-auto": "^1.0.0-next.14",
     "@sveltejs/kit": "^1.0.0-next.240",
@@ -63,6 +64,7 @@
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-config-airbnb-typescript": "^16.1.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-config-tonalio": "^5.1.4",
     "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-jest": "^26.0.0",
