--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,10 @@
 name: ci
 
-on: [push, deployment, deployment_status]
+on: [deployment_status]
 
 jobs:
   e2e:
-    if: github.event_name == 'deployment_status' && github.event.deployment_status.state == 'success'
+    if: github.event.deployment_status.state == 'success'
     runs-on: ubuntu-latest
     steps:
       - name: Dump Github context
@@ -18,9 +18,11 @@ jobs:
       - name: Run Cypress 🌲
         uses: cypress-io/github-action@v2
         with:
+          record: true
           spec: |
             cypress/integration/login.spec.ts
             cypress/integration/sample.spec.ts
         env:
           # CYPRESS_BASE_URL: ${{ github.event.deployment_status.target_url }}
           CYPRESS_BASE_URL: 'https://dev.admin.letand.be'
+          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
