--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "svelte-gql",
   "version": "0.0.1",
   "scripts": {
-    "dev:only": "svelte-kit dev",
+    "dev:only": "svelte-kit dev --host",
     "build:only": "svelte-kit build",
     "tailwind:watch": "cross-env TAILWIND_MODE=watch cross-env NODE_ENV=development postcss src/styles/tailwind.css -o src/styles/tailwind-output.css -w",
     "tailwind:build": "cross-env TAILWIND_MODE=build cross-env NODE_ENV=production postcss src/styles/tailwind.css -o src/styles/tailwind-output.css",
@@ -37,7 +37,7 @@
     "@leveluptuts/svelte-toy": "^0.0.18",
     "@pinojs/json-colorizer": "^3.0.0",
     "@sveltejs/adapter-auto": "^1.0.0-next.16",
-    "@sveltejs/kit": "^1.0.0-next.243",
+    "@sveltejs/kit": "^1.0.0-next.250",
     "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/typography": "^0.5.0",
     "@testing-library/jest-dom": "^5.16.1",
