--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "just-pluck-it": "^2.1.0",
     "just-reduce-object": "^2.0.1",
     "just-zip-it": "^3.0.1",
+    "logrocket": "^2.1.3",
     "npm-check": "^5.9.2",
     "postcss": "^8.4.5",
     "postcss-cli": "^9.0.2",
