--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
-    "custom-lint": "eslint . --ext .ts,.svelte,.graphql",
+    "custom-lint": "eslint . --ext .ts,.svelte",
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
     "generate": "graphql-codegen --config codegen.yml"
   },
@@ -39,7 +39,7 @@
     "@sveltejs/adapter-auto": "^1.0.0-next.16",
     "@sveltejs/kit": "^1.0.0-next.250",
     "@tailwindcss/forms": "^0.4.0",
-    "@tailwindcss/typography": "^0.5.0",
+    "@tailwindcss/typography": "^0.5.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/svelte": "^3.0.3",
     "@types/cookie": "^0.4.1",
@@ -52,7 +52,7 @@
     "autoprefixer": "^10.4.0",
     "babel-loader": "^8.2.3",
     "broadcast-channel": "^4.9.0",
-    "carbon-components-svelte": "^0.55.0",
+    "carbon-components-svelte": "^0.56.1",
     "carbon-icons-svelte": "^10.44.4",
     "carbon-preprocess-svelte": "^0.6.0",
     "concurrently": "^7.0.0",
@@ -60,7 +60,7 @@
     "cross-env": "^7.0.3",
     "cypress": "^9.3.1",
     "date-fns": "^2.27.0",
-    "eslint": "^8.7.0",
+    "eslint": "^8.8.0",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-config-airbnb-typescript": "^16.1.0",
     "eslint-config-prettier": "^8.3.0",
@@ -78,7 +78,7 @@
     "just-map-values": "^3.0.2",
     "just-pluck-it": "^2.1.0",
     "just-reduce-object": "^2.0.1",
-    "just-zip-it": "^3.0.1",
+    "just-zip-it": "^3.0.2",
     "logrocket": "^2.1.3",
     "npm-check": "^5.9.2",
     "postcss": "^8.4.5",
@@ -86,14 +86,14 @@
     "posthog-js": "^1.17.6",
     "prettier": "^2.4.1",
     "prettier-plugin-svelte": "^2.6.0",
-    "svelte": "^3.46.2",
+    "svelte": "^3.46.3",
     "svelte-calendar": "^3.1.6",
-    "svelte-check": "^2.3.0",
+    "svelte-check": "^2.4.0",
     "svelte-fa": "^2.4.0",
     "svelte-jester": "^2.1.5",
     "svelte-loader": "^3.1.2",
     "svelte-preprocess": "^4.10.2",
-    "tailwindcss": "^3.0.16",
+    "tailwindcss": "^3.0.18",
     "ts-jest": "^27.1.3",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
     "tslib": "^2.3.1",
@@ -107,12 +107,12 @@
     "@urql/exchange-graphcache": "^4.3.5",
     "@urql/svelte": "^1.3.2",
     "felte": "0.9.0",
-    "graphql": "^16.0.1",
+    "graphql": "^16.3.0",
     "just-flush": "^2.1.0",
     "pino": "^7.6.3",
     "pino-logflare": "^0.3.12",
     "pino-pretty": "^7.4.0",
-    "urql": "^2.0.5",
+    "urql": "^2.1.0",
     "zod": "^3.11.6"
   }
 }
