--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@graphql-typed-document-node/core": "^3.1.1",
     "@leveluptuts/svelte-toy": "^0.0.18",
     "@pinojs/json-colorizer": "^3.0.0",
+    "@supabase/supabase-js": "^1.29.4",
     "@sveltejs/adapter-auto": "^1.0.0-next.16",
     "@sveltejs/kit": "^1.0.0-next.250",
     "@tailwindcss/forms": "^0.4.0",
