--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@graphql-typed-document-node/core": "^3.1.1",
     "@leveluptuts/svelte-toy": "^0.0.18",
     "@pinojs/json-colorizer": "^3.0.0",
+    "@prisma/client": "^3.8.1",
     "@supabase/supabase-js": "^1.29.4",
     "@sveltejs/adapter-auto": "^1.0.0-next.16",
     "@sveltejs/kit": "^1.0.0-next.250",
@@ -87,6 +88,7 @@
     "posthog-js": "^1.17.6",
     "prettier": "^2.4.1",
     "prettier-plugin-svelte": "^2.6.0",
+    "prisma": "^3.8.1",
     "svelte": "^3.46.3",
     "svelte-calendar": "^3.1.6",
     "svelte-check": "^2.4.1",
@@ -96,6 +98,7 @@
     "svelte-preprocess": "^4.10.2",
     "tailwindcss": "^3.0.18",
     "ts-jest": "^27.1.3",
+    "ts-node": "^10.4.0",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
     "tslib": "^2.3.1",
     "typescript": "^4.5.5",
