--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
     "custom-lint": "eslint . --ext .ts,.svelte",
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
-    "generate": "graphql-codegen --config codegen.yml"
+    "generate": "graphql-codegen --config codegen.yml",
+    "vercel-build": "prisma generate && prisma migrate deploy && yarn run build"
   },
   "devDependencies": {
     "@babel/core": "^7.16.12",
