--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "custom-lint": "eslint . --ext .ts,.svelte",
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
     "generate": "graphql-codegen --config codegen.yml",
-    "vercel-build": "prisma generate && prisma migrate deploy && yarn run build"
+    "vercel-build": "prisma generate && yarn run build"
   },
   "devDependencies": {
     "@babel/core": "^7.16.12",
