--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
     "generate": "graphql-codegen --config codegen.yml",
     "vercel-build": "prisma generate && yarn run build",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "postbuild": "cp node_modules/@prisma/engines/*query* .vercel_build_output/functions/node/render/;cp prisma/schema.prisma .vercel_build_output/functions/node/render/"
   },
   "devDependencies": {
     "@babel/core": "^7.17.0",
