--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.17.0",
+    "@faker-js/faker": "^6.0.0-alpha.5",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@graphql-codegen/cli": "^2.4.0",
     "@graphql-codegen/gql-tag-operations-preset": "^1.2.3",
