--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
     "generate": "graphql-codegen --config codegen.yml",
     "vercel-build": "prisma generate && yarn run build",
-    "postinstall": "prisma generate",
     "postbuild": "cp node_modules/@prisma/engines/*query* .vercel_build_output/functions/node/render/;cp prisma/schema.prisma .vercel_build_output/functions/node/render/"
   },
   "devDependencies": {
@@ -44,6 +43,7 @@
     "@leveluptuts/svelte-toy": "^0.0.18",
     "@pinojs/json-colorizer": "^3.0.0",
     "@prisma/client": "^3.9.1",
+    "@rgossiaux/svelte-headlessui": "^1.0.0-beta.8",
     "@supabase/supabase-js": "^1.29.4",
     "@sveltejs/adapter-auto": "^1.0.0-next.18",
     "@sveltejs/kit": "^1.0.0-next.260",
@@ -53,6 +53,7 @@
     "@testing-library/svelte": "^3.0.3",
     "@types/cookie": "^0.4.1",
     "@types/jest": "^27.0.3",
+    "@types/lodash-es": "^4.17.5",
     "@types/uuid": "^8.3.3",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
     "@typescript-eslint/parser": "^5.10.2",
@@ -88,6 +89,7 @@
     "just-pluck-it": "^2.1.0",
     "just-reduce-object": "^2.0.1",
     "just-zip-it": "^3.0.2",
+    "lodash-es": "^4.17.21",
     "logrocket": "^2.1.3",
     "npm-check": "^5.9.2",
     "postcss": "^8.4.6",
