--- a/.eslintignore
+++ b/.eslintignore
@@ -28,3 +28,5 @@ src/generated
 #############################
 cypress/integration/1-getting-started
 cypress/integration/2-advanced-examples
+
+prisma/seed.ts
