remove unused packages. move packages to dev deps

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "svelte-gql",
+  "name": "svelte-REAdmin",
   "version": "0.0.1",
   "prisma": {
     "seed": "node --loader ts-node/esm prisma/seed.ts"
@@ -18,33 +18,15 @@
     "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
     "custom-lint": "eslint . --ext .ts,.svelte",
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
-    "generate": "graphql-codegen --config codegen.yml",
     "vercel-build": "prisma generate && yarn run build",
     "postbuild": "cp node_modules/@prisma/engines/*query* .vercel_build_output/functions/node/render/;cp prisma/schema.prisma .vercel_build_output/functions/node/render/"
   },
   "devDependencies": {
     "@babel/core": "^7.17.0",
     "@faker-js/faker": "^6.0.0-alpha.5",
-    "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@graphql-codegen/cli": "^2.4.0",
-    "@graphql-codegen/gql-tag-operations-preset": "^1.2.3",
-    "@graphql-codegen/introspection": "^2.1.0",
-    "@graphql-codegen/named-operations-object": "^2.2.0",
-    "@graphql-codegen/near-operation-file-preset": "^2.2.2",
-    "@graphql-codegen/typed-document-node": "^2.2.1",
-    "@graphql-codegen/typescript": "^2.4.1",
-    "@graphql-codegen/typescript-operations": "^2.2.1",
-    "@graphql-codegen/typescript-urql": "^3.4.1",
-    "@graphql-codegen/typescript-urql-graphcache": "^2.2.2",
-    "@graphql-codegen/urql-introspection": "^2.1.0",
-    "@graphql-codegen/urql-svelte-operations-store": "^1.1.8",
-    "@graphql-eslint/eslint-plugin": "^3.7.0",
-    "@graphql-typed-document-node/core": "^3.1.1",
     "@leveluptuts/svelte-toy": "^0.0.18",
     "@pinojs/json-colorizer": "^3.0.0",
     "@prisma/client": "^3.9.1",
-    "@rgossiaux/svelte-headlessui": "^1.0.0-beta.8",
-    "@supabase/supabase-js": "^1.29.4",
     "@sveltejs/adapter-auto": "^1.0.0-next.18",
     "@sveltejs/kit": "^1.0.0-next.260",
     "@tailwindcss/forms": "^0.4.0",
@@ -57,11 +39,8 @@
     "@types/uuid": "^8.3.3",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
     "@typescript-eslint/parser": "^5.10.2",
-    "@urql/devtools": "^2.0.3",
-    "@urql/introspection": "^0.3.1",
     "autoprefixer": "^10.4.0",
     "babel-loader": "^8.2.3",
-    "broadcast-channel": "^4.9.0",
     "carbon-components-svelte": "^0.57.1",
     "carbon-icons-svelte": "^10.44.4",
     "carbon-preprocess-svelte": "^0.6.0",
@@ -91,7 +70,6 @@
     "just-zip-it": "^3.0.2",
     "lodash-es": "^4.17.21",
     "logrocket": "^2.1.3",
-    "npm-check": "^5.9.2",
     "postcss": "^8.4.6",
     "postcss-cli": "^9.0.2",
     "posthog-js": "^1.17.8",
@@ -99,9 +77,7 @@
     "prettier-plugin-svelte": "^2.6.0",
     "prisma": "^3.9.1",
     "svelte": "^3.46.4",
-    "svelte-calendar": "^3.1.6",
     "svelte-check": "^2.4.2",
-    "svelte-fa": "^2.4.0",
     "svelte-jester": "^2.1.5",
     "svelte-loader": "^3.1.2",
     "svelte-preprocess": "^4.10.2",
@@ -111,21 +87,16 @@
     "tsconfig-paths-webpack-plugin": "^3.5.2",
     "tslib": "^2.3.1",
     "typescript": "^4.5.5",
-    "uuid": "^8.3.2"
-  },
-  "type": "module",
-  "dependencies": {
+    "uuid": "^8.3.2",
     "@felte/reporter-svelte": "^0.3.19",
     "@felte/validator-zod": "^0.3.6",
-    "@urql/exchange-graphcache": "^4.3.5",
-    "@urql/svelte": "^1.3.2",
-    "felte": "0.9.0",
-    "graphql": "^16.3.0",
+    "felte": "^0.9.0",
     "just-flush": "^2.1.0",
     "pino": "^7.6.3",
     "pino-logflare": "^0.3.12",
     "pino-pretty": "^7.4.0",
-    "urql": "^2.1.3",
     "zod": "^3.11.6"
-  }
+  },
+  "type": "module",
+  "dependencies": {}
 }
