add headless ui + icons packages

--- a/package.json
+++ b/package.json
@@ -24,9 +24,14 @@
   "devDependencies": {
     "@babel/core": "^7.17.0",
     "@faker-js/faker": "^6.0.0-alpha.5",
+    "@felte/reporter-svelte": "^0.3.19",
+    "@felte/validator-zod": "^0.3.6",
     "@leveluptuts/svelte-toy": "^0.0.18",
     "@pinojs/json-colorizer": "^3.0.0",
     "@prisma/client": "^3.9.1",
+    "@rgossiaux/svelte-headlessui": "^1.0.0-beta.8",
+    "@steeze-ui/heroicons": "^1.0.2",
+    "@steeze-ui/svelte-icon": "^1.2.2",
     "@sveltejs/adapter-auto": "^1.0.0-next.18",
     "@sveltejs/kit": "^1.0.0-next.260",
     "@tailwindcss/forms": "^0.4.0",
@@ -58,9 +63,11 @@
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-jest": "^26.0.0",
     "eslint-plugin-svelte3": "^3.4.0",
+    "felte": "^0.9.0",
     "jest": "^27.4.5",
     "just-capitalize": "^3.0.1",
     "just-flatten-it": "^5.0.1",
+    "just-flush": "^2.1.0",
     "just-insert": "^3.0.1",
     "just-is-empty": "^3.1.1",
     "just-map-keys": "^2.1.1",
@@ -70,11 +77,14 @@
     "just-zip-it": "^3.0.2",
     "lodash-es": "^4.17.21",
     "logrocket": "^2.1.3",
+    "pino": "^7.6.3",
+    "pino-logflare": "^0.3.12",
+    "pino-pretty": "^7.4.0",
     "postcss": "^8.4.6",
     "postcss-cli": "^9.0.2",
     "posthog-js": "^1.17.8",
     "prettier": "^2.4.1",
-    "prettier-plugin-svelte": "^2.6.0",
+    "prettier-plugin-tailwindcss": "^0.1.5",
     "prisma": "^3.9.1",
     "svelte": "^3.46.4",
     "svelte-check": "^2.4.2",
@@ -88,13 +98,6 @@
     "tslib": "^2.3.1",
     "typescript": "^4.5.5",
     "uuid": "^8.3.2",
-    "@felte/reporter-svelte": "^0.3.19",
-    "@felte/validator-zod": "^0.3.6",
-    "felte": "^0.9.0",
-    "just-flush": "^2.1.0",
-    "pino": "^7.6.3",
-    "pino-logflare": "^0.3.12",
-    "pino-pretty": "^7.4.0",
     "zod": "^3.11.6"
   },
   "type": "module",
