--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "custom-lint": "eslint . --ext .ts,.svelte",
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
     "vercel-build": "prisma generate && yarn run build",
-    "postbuild": "cp node_modules/@prisma/engines/*query* .vercel_build_output/functions/node/render/;cp prisma/schema.prisma .vercel_build_output/functions/node/render/"
+    "postbuild": "cp node_modules/@prisma/engines/*query* .vercel_build_output/functions/node/render/;cp prisma/schema.prisma .vercel_build_output/functions/node/render/",
+    "postinstall": "prisma generate"
   },
   "devDependencies": {
     "@babel/core": "^7.17.2",
