--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@felte/validator-zod": "^0.3.6",
     "@leveluptuts/svelte-toy": "^0.0.18",
     "@pinojs/json-colorizer": "^3.0.0",
-    "@prisma/client": "3.9.1",
+    "@prisma/client": "^3.9.2",
     "@rgossiaux/svelte-headlessui": "^1.0.0-beta.9",
     "@steeze-ui/heroicons": "^1.1.1",
     "@steeze-ui/svelte-icon": "^1.3.1",
@@ -83,7 +83,7 @@
     "posthog-js": "^1.17.8",
     "prettier": "^2.4.1",
     "prettier-plugin-tailwindcss": "^0.1.7",
-    "prisma": "3.9.1",
+    "prisma": "^3.9.2",
     "svelte": "^3.46.4",
     "svelte-check": "^2.4.3",
     "svelte-jester": "^2.1.5",
