--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
     "custom-lint": "eslint . --ext .ts,.svelte",
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "vercel-build": "prisma generate && yarn run build"
   },
   "devDependencies": {
     "@babel/core": "^7.17.2",
