--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
     "custom-lint": "eslint . --ext .ts,.svelte",
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
-    "postinstall": "prisma generate",
-    "vercel-build": "prisma generate && yarn run build"
+    "vercel-build": "prisma generate && yarn run build",
+    "postbuild": "cp node_modules/@prisma/engines/*query* .vercel_build_output/functions/node/render/;cp prisma/schema.prisma .vercel_build_output/functions/node/render/",
+    "postinstall": "prisma generate"
   },
   "devDependencies": {
     "@babel/core": "^7.17.2",
