--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@steeze-ui/heroicons": "^1.1.1",
     "@steeze-ui/svelte-icon": "^1.3.1",
     "@sveltejs/adapter-auto": "^1.0.0-next.22",
-    "@sveltejs/kit": "^1.0.0-next.267",
+    "@sveltejs/kit": "^1.0.0-next.269",
     "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/typography": "^0.5.2",
     "@testing-library/jest-dom": "^5.16.1",
@@ -92,6 +92,7 @@
     "ts-node": "^10.5.0",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
     "tslib": "^2.3.1",
+    "type-fest": "^2.11.2",
     "typescript": "^4.5.5",
     "uuid": "^8.3.2",
     "zod": "^3.11.6"
