apply iosevka font

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,4 +5,7 @@
 	},
 	"html.autoCreateQuotes": false,
 	"editor.suggest.showWords": false,
+	"editor.fontLigatures": true,
+	"editor.fontFamily": "iosevka",
+	"editor.fontSize": 16,
 }
