move setting to workspace (was originally in user)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,4 +8,6 @@
 	"editor.fontLigatures": true,
 	"editor.fontFamily": "iosevka",
 	"editor.fontSize": 16,
+	"diffEditor.codeLens": true,
+	"partialDiff.enableTelemetry": false,
 }
