--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,15 +1,24 @@
 {
 	"css.validate": false,
 	"files.exclude": {
+		// this interfering with imports?
 		"**/node_modules/": true
 	},
 	"html.autoCreateQuotes": false,
 	"editor.suggest.showWords": false,
 	"editor.fontLigatures": true,
 	"editor.fontFamily": "iosevka",
-	"editor.fontSize": 16,
 	"diffEditor.codeLens": true,
 	"partialDiff.enableTelemetry": false,
 	"editor.minimap.renderCharacters": false,
 	"editor.autoClosingBrackets": "always",
+	"editor.fontSize": 16,
+	"editor.suggest.snippetsPreventQuickSuggestions": false,
+	"editor.suggestOnTriggerCharacters": false, // forces tailwind to take a chill pill
+	"editor.quickSuggestions": {
+		"other": false, // forces tailwind to take a chill pill
+		"comments": false,
+		"strings": false
+	},
+	"editor.suggest.preview": true
 }
