use new transformation

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,5 +20,6 @@
 		"comments": false,
 		"strings": false
 	},
-	"editor.suggest.preview": true
+	"editor.suggest.preview": true,
+	"svelte.plugin.svelte.useNewTransformation": true
 }
