--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "svelte-loader": "^3.1.2",
     "svelte-preprocess": "^4.10.3",
     "tailwindcss": "^3.0.23",
+    "trpc-sveltekit": "^1.1.2",
     "ts-jest": "^27.1.3",
     "ts-node": "^10.5.0",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
