--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "@tailwindcss/typography": "^0.5.2",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/svelte": "^3.0.3",
+    "@trpc/client": "^9.19.0",
+    "@trpc/server": "^9.19.0",
     "@types/cookie": "^0.4.1",
     "@types/jest": "^27.0.3",
     "@types/lodash-es": "^4.17.6",
@@ -82,6 +84,7 @@
     "prettier": "^2.4.1",
     "prettier-plugin-tailwindcss": "^0.1.7",
     "prisma": "^3.9.2",
+    "superjson": "^1.8.1",
     "svelte": "^3.46.4",
     "svelte-check": "^2.4.5",
     "svelte-jester": "^2.1.5",
@@ -93,7 +96,6 @@
     "ts-node": "^10.5.0",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
     "tslib": "^2.3.1",
-    "type-fest": "^2.11.2",
     "typescript": "^4.5.5",
     "uuid": "^8.3.2",
     "zod": "^3.11.6"
