--- a/package.json
+++ b/package.json
@@ -24,10 +24,7 @@
   "devDependencies": {
     "@babel/core": "^7.17.2",
     "@faker-js/faker": "^6.0.0-alpha.6",
-    "@felte/reporter-svelte": "^1.0.0",
-    "@felte/validator-zod": "^1.0.1",
     "@pinojs/json-colorizer": "^3.0.0",
-    "@prisma/client": "^3.9.2",
     "@rgossiaux/svelte-headlessui": "^1.0.0-beta.9",
     "@steeze-ui/heroicons": "^1.1.1",
     "@steeze-ui/svelte-icon": "^1.3.1",
@@ -37,8 +34,6 @@
     "@tailwindcss/typography": "^0.5.2",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/svelte": "^3.0.3",
-    "@trpc/client": "^9.19.0",
-    "@trpc/server": "^9.19.0",
     "@types/cookie": "^0.4.1",
     "@types/jest": "^27.0.3",
     "@types/lodash-es": "^4.17.6",
@@ -61,7 +56,6 @@
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-jest": "^26.1.0",
     "eslint-plugin-svelte3": "^3.4.0",
-    "felte": "^1.0.0",
     "jest": "^27.5.1",
     "just-capitalize": "^3.0.1",
     "just-flatten-it": "^5.0.1",
@@ -84,22 +78,29 @@
     "prettier": "^2.4.1",
     "prettier-plugin-tailwindcss": "^0.1.7",
     "prisma": "^3.9.2",
-    "superjson": "^1.8.1",
     "svelte": "^3.46.4",
     "svelte-check": "^2.4.5",
     "svelte-jester": "^2.1.5",
     "svelte-loader": "^3.1.2",
     "svelte-preprocess": "^4.10.3",
     "tailwindcss": "^3.0.23",
-    "trpc-sveltekit": "^1.1.2",
     "ts-jest": "^27.1.3",
     "ts-node": "^10.5.0",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
     "tslib": "^2.3.1",
     "typescript": "^4.5.5",
-    "uuid": "^8.3.2",
-    "zod": "^3.11.6"
+    "uuid": "^8.3.2"
   },
   "type": "module",
-  "dependencies": {}
+  "dependencies": {
+    "@felte/reporter-svelte": "^1.0.0",
+    "@felte/validator-zod": "^1.0.1",
+    "@prisma/client": "^3.9.2",
+    "@trpc/client": "^9.19.0",
+    "@trpc/server": "^9.19.0",
+    "felte": "^1.0.0",
+    "superjson": "^1.8.1",
+    "trpc-sveltekit": "^1.1.2",
+    "zod": "^3.11.6"
+  }
 }
