move /components to /lib/components

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,7 @@
 				"src/lib/*"
 			],
 			"$components/*": [
-				"./src/components/*"
+				"src/lib/components/*"
 			],
 			"$generated/*": [
 				"./src/generated/*"
