disable eslint vscode plugin

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,5 +21,7 @@
 		"strings": false
 	},
 	"editor.suggest.preview": true,
-	"svelte.plugin.svelte.useNewTransformation": true
+	"svelte.plugin.svelte.useNewTransformation": true,
+	// "svelte.plugin.svelte.enable": false,
+	"eslint.enable": false
 }
