--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,5 +23,5 @@
 	"editor.suggest.preview": true,
 	"svelte.plugin.svelte.useNewTransformation": true,
 	// "svelte.plugin.svelte.enable": false,
-	"eslint.enable": false
+	// "eslint.enable": false
 }
