--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "@trpc/server": "^9.19.0",
     "felte": "^1.0.0",
     "superjson": "^1.8.1",
+    "svelte-select": "^4.4.7",
     "trpc-sveltekit": "^1.1.2",
     "zod": "^3.11.6"
   }
