--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-jest": "^26.1.1",
     "eslint-plugin-svelte3": "^3.4.1",
+    "fuse.js": "^6.5.3",
     "jest": "^27.5.1",
     "lodash-es": "^4.17.21",
     "logrocket": "^2.2.0",
