--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "seed": "node --loader ts-node/esm prisma/seed.ts"
   },
   "scripts": {
-    "dev:only": "svelte-kit dev",
+    "dev:only": "svelte-kit dev --host",
     "build:only": "svelte-kit build",
     "tailwind:watch": "cross-env TAILWIND_MODE=watch cross-env NODE_ENV=development postcss src/styles/tailwind.css -o src/styles/tailwind-output.css -w",
     "tailwind:build": "cross-env TAILWIND_MODE=build cross-env NODE_ENV=production postcss src/styles/tailwind.css -o src/styles/tailwind-output.css",
@@ -71,6 +71,7 @@
     "prettier": "^2.4.1",
     "prettier-plugin-tailwindcss": "^0.1.8",
     "prisma": "^3.10.0",
+    "rollup-plugin-visualizer": "^5.6.0",
     "svelte": "^3.46.4",
     "svelte-check": "^2.4.5",
     "svelte-jester": "^2.3.2",
