add new tsconfig.eslint.json for external files

--- a/.eslintignore
+++ b/.eslintignore
@@ -22,5 +22,5 @@ coverage/*
 cypress/integration/1-getting-started
 cypress/integration/2-advanced-examples
 
-prisma/seed.ts
+# prisma/seed.ts
 src/lib/utils/currency.ts
