better tsconfig setup, fix errors

--- a/.eslintignore
+++ b/.eslintignore
@@ -21,6 +21,7 @@ coverage/*
 #############################
 cypress/integration/1-getting-started
 cypress/integration/2-advanced-examples
+cypress/
 
 # prisma/seed.ts
 src/lib/utils/currency.ts
