--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -4,6 +4,7 @@
     },
     "include": [
         "svelte.config.js",
-        "prisma/seed.ts"
-    ]
+        "prisma/seed.ts",
+        "jest-setup.ts",
+    ],
 }
