--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,5 +2,16 @@
 	"extends": "./.svelte-kit/tsconfig.json",
 	"compilerOptions": {
 		"strict": true,
+		"paths": {
+			"$lib": [
+				"src/lib"
+			],
+			"$lib/*": [
+				"src/lib/*"
+			],
+			"$components/*": [
+				"./src/lib/components/*"
+			],
+		},
 	},
 }
