--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "@rgossiaux/svelte-headlessui": "^1.0.0-beta.10",
     "@steeze-ui/heroicons": "^1.1.1",
     "@steeze-ui/svelte-icon": "^1.3.1",
-    "@sveltejs/adapter-auto": "^1.0.0-next.30",
-    "@sveltejs/kit": "1.0.0-next.291",
+    "@sveltejs/adapter-auto": "^1.0.0-next.31",
+    "@sveltejs/kit": "^1.0.0-next.294",
     "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/typography": "^0.5.2",
     "@testing-library/jest-dom": "^5.16.1",
