--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "custom-lint": "eslint . --ext .ts,.svelte",
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
     "vercel-build": "prisma generate && yarn run build",
-    "postbuild": "cp node_modules/@prisma/engines/*query* .vercel_build_output/functions/node/render/;cp prisma/schema.prisma .vercel_build_output/functions/node/render/"
+    "postbuild": "cp node_modules/@prisma/engines/*query* .vercel_build_output/functions/node/render/;cp prisma/schema.prisma .vercel_build_output/functions/node/render/",
+    "build:temporal": "tsc --build temporal/tsconfig.json",
+    "start:worker": "node --loader ts-node/esm temporal/src/worker.ts"
   },
   "devDependencies": {
     "@babel/core": "^7.17.5",
@@ -59,6 +61,7 @@
     "jest": "^27.5.1",
     "lodash-es": "^4.17.21",
     "logrocket": "^2.2.0",
+    "nodemon": "^2.0.15",
     "postcss": "^8.4.7",
     "postcss-cli": "^9.0.2",
     "posthog-js": "^1.17.9",
@@ -89,6 +92,7 @@
     "felte": "^1.0.1",
     "superjson": "^1.8.1",
     "svelte-select": "^4.4.7",
+    "temporalio": "^0.18.0",
     "trpc-sveltekit": "^1.1.9",
     "zod": "^3.13.4"
   }
