--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
     "vercel-build": "prisma generate && yarn run build",
     "postbuild": "cp node_modules/@prisma/engines/*query* .vercel_build_output/functions/node/render/;cp prisma/schema.prisma .vercel_build_output/functions/node/render/",
+    "dev:temporal": "tsc --build --watch temporal/tsconfig.json",
     "build:temporal": "tsc --build temporal/tsconfig.json",
     "start:worker": "node --loader ts-node/esm temporal/src/worker.ts"
   },
