--- a/temporal/tsconfig.json
+++ b/temporal/tsconfig.json
@@ -1,16 +1,15 @@
 {
-  "extends": "@tsconfig/node16/tsconfig.json", // optional but nice to have
+  "extends": "@tsconfig/node16/tsconfig.json",
   "version": "4.4.2",
   "compilerOptions": {
-  "emitDecoratorMetadata": false,
-  "experimentalDecorators": false,
-  "declaration": true,
-  "declarationMap": true,
-  "sourceMap": true,
-  "composite": true,
-  "rootDir": "./src",
-  "outDir": "./lib"
+    "module": "esnext",
+    // "target": "esnext",
+    "moduleResolution": "node",
+    "declaration": true,
+    "declarationMap": true,
+    "sourceMap": true,
+    "rootDir": "./src",
+    "outDir": "./lib"
   },
-  "include": ["src/**/*.ts"],
-  "exclude": ["node_modules"]
+  "include": ["src/**/*.ts"]
 }
