--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "postbuild": "cp node_modules/@prisma/engines/*query* .vercel_build_output/functions/node/render/;cp prisma/schema.prisma .vercel_build_output/functions/node/render/",
     "dev:temporal": "tsc --build --watch temporal/tsconfig.json",
     "build:temporal": "tsc --build temporal/tsconfig.json",
-    "start:worker": "node --loader ts-node/esm temporal/src/worker.ts"
+    "start:worker": "node --loader ts-node/esm temporal/src/worker.ts",
+    "start:worker.watch": "nodemon --watch './temporal/lib/**/*.{ts,js}' --exec 'node --loader ts-node/esm' temporal/src/worker.ts"
   },
   "devDependencies": {
     "@babel/core": "^7.17.5",
