--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.17.5",
-    "@faker-js/faker": "^6.0.0-alpha.7",
-    "@rgossiaux/svelte-headlessui": "^1.0.0-beta.10",
+    "@faker-js/faker": "^6.0.0-beta.0",
+    "@rgossiaux/svelte-headlessui": "^1.0.0-beta.12",
     "@steeze-ui/heroicons": "^1.1.1",
     "@steeze-ui/svelte-icon": "^1.3.1",
     "@sveltejs/adapter-auto": "^1.0.0-next.31",
@@ -41,8 +41,8 @@
     "@types/jest": "^27.4.1",
     "@types/lodash-es": "^4.17.6",
     "@types/uuid": "^8.3.3",
-    "@typescript-eslint/eslint-plugin": "^5.13.0",
-    "@typescript-eslint/parser": "^5.13.0",
+    "@typescript-eslint/eslint-plugin": "^5.14.0",
+    "@typescript-eslint/parser": "^5.14.0",
     "autoprefixer": "^10.4.0",
     "babel-loader": "^8.2.3",
     "concurrently": "^7.0.0",
@@ -64,7 +64,7 @@
     "lodash-es": "^4.17.21",
     "logrocket": "^2.2.0",
     "nodemon": "^2.0.15",
-    "postcss": "^8.4.7",
+    "postcss": "^8.4.8",
     "postcss-cli": "^9.0.2",
     "posthog-js": "^1.17.9",
     "prettier": "^2.4.1",
@@ -78,7 +78,7 @@
     "svelte-preprocess": "^4.10.4",
     "tailwindcss": "^3.0.23",
     "ts-jest": "^27.1.3",
-    "ts-node": "^10.6.0",
+    "ts-node": "^10.7.0",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
     "tslib": "^2.3.1",
     "typescript": "^4.6.2",
