--- a/package.json
+++ b/package.json
@@ -38,13 +38,14 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/svelte": "^3.0.3",
     "@types/cookie": "^0.4.1",
-    "@types/jest": "^27.4.1",
     "@types/lodash-es": "^4.17.6",
     "@types/uuid": "^8.3.3",
     "@typescript-eslint/eslint-plugin": "^5.14.0",
     "@typescript-eslint/parser": "^5.14.0",
+    "@vitest/ui": "^0.6.0",
     "autoprefixer": "^10.4.0",
     "babel-loader": "^8.2.3",
+    "c8": "^7.11.0",
     "concurrently": "^7.0.0",
     "cookie": "^0.4.2",
     "cross-env": "^7.0.3",
@@ -57,10 +58,9 @@
     "eslint-config-tonalio": "^5.1.4",
     "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-jest": "^26.1.1",
     "eslint-plugin-svelte3": "^3.4.1",
     "fuse.js": "^6.5.3",
-    "jest": "^27.5.1",
+    "jsdom": "^19.0.0",
     "lodash-es": "^4.17.21",
     "logrocket": "^2.2.0",
     "nodemon": "^2.0.15",
@@ -73,11 +73,9 @@
     "rollup-plugin-visualizer": "^5.6.0",
     "svelte": "^3.46.4",
     "svelte-check": "^2.4.5",
-    "svelte-jester": "^2.3.2",
     "svelte-loader": "^3.1.2",
     "svelte-preprocess": "^4.10.4",
     "tailwindcss": "^3.0.23",
-    "ts-jest": "^27.1.3",
     "ts-node": "^10.7.0",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
     "tslib": "^2.3.1",
