use new svelte Load imports

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,8 +8,8 @@
 		"noImplicitThis": true,
 		"noFallthroughCasesInSwitch": true,
 		"noImplicitReturns": true,
-		// "noUncheckedIndexedAccess": true,
-		// "exactOptionalPropertyTypes": true,
+		"noUncheckedIndexedAccess": true,
+		"exactOptionalPropertyTypes": true,
 		"paths": {
 			"$lib": [
 				"src/lib"
