init vanilla chart.js

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "algoliasearch": "^4.13.0",
     "autoprefixer": "^10.4.4",
     "c8": "^7.11.0",
+    "chart.js": "^3.7.1",
     "concurrently": "^7.0.0",
     "cookie": "^0.4.2",
     "cross-env": "^7.0.3",
