--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "seed": "node --loader ts-node/esm prisma/seed.ts"
   },
   "scripts": {
-    "dev": "svelte-kit dev",
+    "dev": "svelte-kit dev --host",
     "build": "svelte-kit build",
     "package": "svelte-kit package",
     "preview": "svelte-kit preview",
@@ -23,13 +23,13 @@
     "start:worker.watch": "nodemon --watch './temporal/lib/**/*.{ts,js}' --exec 'node --loader ts-node/esm' temporal/src/worker.ts"
   },
   "devDependencies": {
-    "@faker-js/faker": "^6.0.0",
+    "@faker-js/faker": "^6.1.1",
     "@felte/reporter-svelte": "^1.0.3",
     "@felte/reporter-tippy": "^1.0.5",
     "@felte/validator-zod": "^1.0.5",
-    "@fortawesome/free-brands-svg-icons": "^6.1.0",
-    "@fortawesome/free-regular-svg-icons": "^6.1.0",
-    "@fortawesome/free-solid-svg-icons": "^6.1.0",
+    "@fortawesome/free-brands-svg-icons": "^6.1.1",
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@prisma/client": "^3.11.1",
     "@rgossiaux/svelte-headlessui": "^1.0.0-beta.12",
     "@steeze-ui/heroicons": "^1.1.1",
@@ -47,8 +47,8 @@
     "@types/jsonwebtoken": "^8.5.8",
     "@types/lodash-es": "^4.17.6",
     "@types/uuid": "^8.3.3",
-    "@typescript-eslint/eslint-plugin": "^5.16.0",
-    "@typescript-eslint/parser": "^5.16.0",
+    "@typescript-eslint/eslint-plugin": "^5.17.0",
+    "@typescript-eslint/parser": "^5.17.0",
     "@vitest/ui": "^0.8.1",
     "algoliasearch": "^4.13.0",
     "autoprefixer": "^10.4.4",
@@ -57,7 +57,7 @@
     "chartjs-adapter-date-fns": "^2.0.0",
     "cookie": "^0.4.2",
     "date-fns": "^2.27.0",
-    "eslint": "^8.11.0",
+    "eslint": "^8.12.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-svelte3": "^3.4.1",
     "felte": "^1.1.5",
@@ -71,12 +71,12 @@
     "nodemon": "^2.0.15",
     "postcss": "^8.4.12",
     "posthog-js": "^1.18.0",
-    "prettier": "^2.6.0",
+    "prettier": "^2.6.1",
     "prettier-plugin-tailwindcss": "^0.1.8",
     "prisma": "^3.11.0",
     "rollup-plugin-visualizer": "^5.6.0",
     "superjson": "^1.8.1",
-    "svelte": "^3.46.4",
+    "svelte": "^3.46.6",
     "svelte-check": "^2.4.6",
     "svelte-fa": "^2.4.0",
     "svelte-preprocess": "^4.10.4",
@@ -88,7 +88,7 @@
     "ts-node": "^10.7.0",
     "tslib": "^2.3.1",
     "twilio": "^3.75.1",
-    "typescript": "^4.6.2",
+    "typescript": "^4.6.3",
     "uuid": "^8.3.2",
     "vitest": "^0.8.1",
     "vitest-svelte-kit": "^0.0.6",
