rename launch config

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,27 +8,17 @@
 			"type": "pwa-node",
 			// "type": "node",
 			"request": "launch",
-			"name": "lihau test",
-			"skipFiles": [
-				"<node_internals>/**"
-			],
-			"args": [
-				"--inspect",
-				"node_modules/.bin/svelte-kit",
-				"dev"
-			]
+			"name": "sveltekit ssr: debug",
+			"skipFiles": ["<node_internals>/**"],
+			"args": ["--inspect", "node_modules/.bin/svelte-kit", "dev"]
 		},
 		// run a ts file using node --loader ts-node
 		{
 			"type": "node",
 			"request": "launch",
 			"name": "ts-node",
-			"args": [
-				"--loader",
-				"ts-node/esm",
-				"${file}"
-			],
-			"cwd": "${workspaceFolder}",
+			"args": ["--loader", "ts-node/esm", "${file}"],
+			"cwd": "${workspaceFolder}"
 			// "console": "integratedTerminal",
 		}
 	]
